--- a/markdown_generator/proceedings.bib
+++ b/markdown_generator/proceedings.bib
@@ -9,11 +9,7 @@
                   Jennifer Neville},
   title        = {{ODE-RSSM:} Learning Stochastic Recurrent State Space Model from Irregularly
                   Sampled Data},
-  booktitle    = {Thirty-Seventh {AAAI} Conference on Artificial Intelligence, {AAAI}
-                  2023, Thirty-Fifth Conference on Innovative Applications of Artificial
-                  Intelligence, {IAAI} 2023, Thirteenth Symposium on Educational Advances
-                  in Artificial Intelligence, {EAAI} 2023, Washington, DC, USA, February
-                  7-14, 2023},
+  booktitle    = {Conference on Artificial Intelligence, {AAAI}2023},
   pages        = {11060--11068},
   publisher    = {{AAAI} Press},
   year         = {2023},
@@ -22,7 +18,8 @@
   url          = {https://ojs.aaai.org/index.php/AAAI/article/view/26310},
   timestamp    = {Mon, 31 Jul 2023 17:04:04 +0200},
   biburl       = {https://dblp.org/rec/conf/aaai/YuanBZLD23.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  mark    = {CCF-A}
 }
 @inproceedings{DBLP:conf/icann/LiYB20,
   author       = {Jia Li and
@@ -33,9 +30,7 @@
                   Stefan Wermter},
   title        = {An Improved Reinforcement Learning Based Heuristic Dynamic Programming
                   Algorithm for Model-Free Optimal Control},
-  booktitle    = {Artificial Neural Networks and Machine Learning - {ICANN} 2020 - 29th
-                  International Conference on Artificial Neural Networks, Bratislava,
-                  Slovakia, September 15-18, 2020, Proceedings, Part {II}},
+  booktitle    = {International Conference on Artificial Neural Networks, {ICANN}2020},
   series       = {Lecture Notes in Computer Science},
   volume       = {12397},
   pages        = {282--294},
@@ -57,7 +52,7 @@
   title        = {Improving Word Representation Quality Trained by word2vec via a More
                   Efficient Hierarchical Clustering Method},
   booktitle    = {Cooperative Design, Visualization, and Engineering - 15th International
-                  Conference, {CDVE} 2018, Hangzhou, China, October 21-24, 2018, Proceedings},
+                  Conference, {CDVE} 2018},
   series       = {Lecture Notes in Computer Science},
   volume       = {11151},
   pages        = {299--303},
