--- a/markdown_generator/pubs.bib
+++ b/markdown_generator/pubs.bib
@@ -9,6 +9,7 @@
   number={7},
   pages={7894-7904},
   doi={10.1109/TII.2022.3207835},
+  mark={SCI-1区},
   url={https://ieeexplore.ieee.org/abstract/document/9895321}
   }
 @ARTICLE{9732304,
@@ -22,6 +23,7 @@
   number={4},
   pages={686-698},
   doi={10.1109/JAS.2022.105464},
+  mark={SCI-1区},
   url={https://ieeexplore.ieee.org/abstract/document/9732304}
  }
 
@@ -39,8 +41,10 @@
 	year = {2022},
 	month = {09},
 	day = {01},
+    mark={SCI-1区},
 	Bdsk-Url-1 = {https://www.sciencedirect.com/science/article/pii/S0886779822002188},
-	Bdsk-Url-2 = {https://doi.org/10.1016/j.tust.2022.104578}}
+	Bdsk-Url-2 = {https://doi.org/10.1016/j.tust.2022.104578}
+}
 
 
 @article{s20051260,
@@ -91,6 +95,7 @@
   month={07},
   day={27},
   publisher={自动化学报},
+  mark={CCF-A中文},
   url={http://www.aas.net.cn/cn/article/doi/10.16383/j.aas.c190348}
 }
 
