--- a/markdown_generator/proceedings.bib
+++ b/markdown_generator/proceedings.bib
@@ -42,6 +42,7 @@
   doi          = {10.1007/978-3-030-61616-8\_23},
   timestamp    = {Tue, 20 Oct 2020 18:10:19 +0200},
   biburl       = {https://dblp.org/rec/conf/icann/LiYB20.bib},
+  mark    = {CCF-C},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 @inproceedings{DBLP:conf/cdve/YuanBH18,
