--- a/markdown_generator/pubs.bib
+++ b/markdown_generator/pubs.bib
@@ -112,3 +112,15 @@
   publisher={工程科学学报},
   url={http://cje.ustb.edu.cn/article/doi/10.13374/j.issn2095-9389.2021.12.02.004}
 }
+@ARTICLE{10705802,
+  author={Yuan, Zhaolin and Zhang, ZiXuan and Li, Xiaorui and Cui, Yunduan and Li, Ming and Ban, Xiaojuan},
+  journal={IEEE Transactions on Industrial Informatics}, 
+  title={Controlling Partially Observed Industrial System Based on Offline Reinforcement Learning—A Case Study of Paste Thickener}, 
+  year={2024},
+  volume={},
+  number={},
+  pages={1-11},
+  mark={SCI-1区},
+  keywords={Process control;Pipelines;Safety;Heuristic algorithms;Training;Monitoring;Minerals;Feeds;Working environment noise;Uncertainty;Intelligent control;offline reinforcement learning (RL);partially observed Markov decision processes (POMDP);paste thickener},
+  doi={10.1109/TII.2024.3423440}
+}
