--- a/markdown_generator/pubs.bib
+++ b/markdown_generator/pubs.bib
@@ -124,3 +124,15 @@
   keywords={Process control;Pipelines;Safety;Heuristic algorithms;Training;Monitoring;Minerals;Feeds;Working environment noise;Uncertainty;Intelligent control;offline reinforcement learning (RL);partially observed Markov decision processes (POMDP);paste thickener},
   doi={10.1109/TII.2024.3423440}
 }
+@article{LI2025100605,
+title = {Quantification of paste homogeneity by vision-based identification method: Case study for an industrial mixer},
+journal = {Developments in the Built Environment},
+volume = {21},
+pages = {100605},
+year = {2025},
+issn = {2666-1659},
+doi = {https://doi.org/10.1016/j.dibe.2025.100605},
+url = {https://www.sciencedirect.com/science/article/pii/S2666165925000055},
+author = {Xiaorui Li and Zhaolin Yuan and Hezheng Wang and Yong Wang and Xiaojuan Ban},
+keywords = {Cemented paste backfill, Paste homogeneity, Image segmentation, Gaussian process, Homogeneity metric},
+}
