--- a/markdown_generator/pubs.bib
+++ b/markdown_generator/pubs.bib
@@ -116,10 +116,10 @@
   author={Yuan, Zhaolin and Zhang, ZiXuan and Li, Xiaorui and Cui, Yunduan and Li, Ming and Ban, Xiaojuan},
   journal={IEEE Transactions on Industrial Informatics}, 
   title={Controlling Partially Observed Industrial System Based on Offline Reinforcement Learning—A Case Study of Paste Thickener}, 
-  year={2024},
-  volume={},
-  number={},
-  pages={1-11},
+  year={2025},
+  volume={21},
+  number={1},
+  pages={49-59},
   mark={SCI-1区},
   keywords={Process control;Pipelines;Safety;Heuristic algorithms;Training;Monitoring;Minerals;Feeds;Working environment noise;Uncertainty;Intelligent control;offline reinforcement learning (RL);partially observed Markov decision processes (POMDP);paste thickener},
   doi={10.1109/TII.2024.3423440}
@@ -135,4 +135,5 @@ doi = {https://doi.org/10.1016/j.dibe.2025.100605},
 url = {https://www.sciencedirect.com/science/article/pii/S2666165925000055},
 author = {Xiaorui Li and Zhaolin Yuan and Hezheng Wang and Yong Wang and Xiaojuan Ban},
 keywords = {Cemented paste backfill, Paste homogeneity, Image segmentation, Gaussian process, Homogeneity metric},
+mark={SCI-2区, IF=6.2}
 }
