--- a/markdown_generator/pubs.bib
+++ b/markdown_generator/pubs.bib
@@ -137,3 +137,14 @@ author = {Xiaorui Li and Zhaolin Yuan and Hezheng Wang and Yong Wang and Xiaojua
 keywords = {Cemented paste backfill, Paste homogeneity, Image segmentation, Gaussian process, Homogeneity metric},
 mark={SCI-2区, IF=6.2}
 }
+@article{YUAN2025,
+title = {Chat with MES: LLM-driven user interface for manipulating garment manufacturing system through natural language},
+journal = {Journal of Manufacturing Systems},
+year = {2025},
+issn = {0278-6125},
+doi = {https://doi.org/10.1016/j.jmsy.2025.02.008},
+url = {https://www.sciencedirect.com/science/article/pii/S027861252500038X},
+author = {Zhaolin Yuan and Ming Li and Chang Liu and Fangyuan Han and Haolun Huang and Hong-Ning Dai},
+keywords = {Interactive Manufacturing Execution System, Large language model, Text2SQL, LLM-Agent, Human-computer interaction},
+mark={SCI-1区, IF=12.3}
+}
