--- a/markdown_generator/pubs.bib
+++ b/markdown_generator/pubs.bib
@@ -148,3 +148,15 @@ author = {Zhaolin Yuan and Ming Li and Chang Liu and Fangyuan Han and Haolun Hua
 keywords = {Interactive Manufacturing Execution System, Large language model, Text2SQL, LLM-Agent, Human-computer interaction},
 mark={SCI-1区, IF=12.3}
 }
+@ARTICLE{11025818,
+  author={Yuan, Zhaolin and Ma, Long and Wei, Wenjia and Zhu, Xia and Sun, Mingjie and Chen, Duxin and Ban, Xiaojuan},
+  journal={IEEE Transactions on Neural Networks and Learning Systems}, 
+  title={NetEventCause: Event-Driven Root Cause Analysis for Large Network System Without Topology}, 
+  year={2025},
+  volume={},
+  number={},
+  pages={1-12},
+  keywords={Network systems;Topology;Network topology;Cause effect analysis;Time series analysis;Cloud computing;Training;Accuracy;Atmospheric modeling;Sun;Artificial intelligence for IT operations (AIOps);attribution method;data stream mining;event modeling},
+  doi={10.1109/TNNLS.2025.3574316},
+mark={SCI-1区, IF=10.2}
+}
