--- a/markdown_generator/pubs.bib
+++ b/markdown_generator/pubs.bib
@@ -158,5 +158,6 @@ mark={SCI-1区, IF=12.3}
   pages={1-12},
   keywords={Network systems;Topology;Network topology;Cause effect analysis;Time series analysis;Cloud computing;Training;Accuracy;Atmospheric modeling;Sun;Artificial intelligence for IT operations (AIOps);attribution method;data stream mining;event modeling},
   doi={10.1109/TNNLS.2025.3574316},
+url={https://ieeexplore.ieee.org/abstract/document/11025818},
 mark={SCI-1区, IF=10.2}
 }
