--- a/markdown_generator/pubs.bib
+++ b/markdown_generator/pubs.bib
@@ -1,3 +1,16 @@
+@ARTICLE{11075912,
+  author={Ouyang, Zhiyuan and Yuan, Zhaolin and Chen, Qiqi and Li, Ming and Zhao, Zhiheng and Huang, George Q.},
+  journal={IEEE Transactions on Intelligent Transportation Systems}, 
+  title={Shipment Scheduling and Routing Protocols in Cyber-Physical Internet for Prefabricated Construction Modules Logistics}, 
+  year={2025},
+  volume={26},
+  number={10},
+  pages={16032-16046},
+  keywords={Logistics;Transportation;Routing protocols;Prefabricated construction;Containers;Routing;Information sharing;Uncertainty;Job shop scheduling;Real-time systems;Cyber-physical internet;dynamic freight routing;routing protocols;multimodal and multicriteria shipment},
+  doi={10.1109/TITS.2025.3581569},
+  mark={SCI-1区, IF=8.4},
+}
+
 @ARTICLE{9895321,
   author={Yuan, Zhaolin and Wang, Yewan and Ban, Xiaojuan and Ning, Chunyu and Dai, Hong-Ning and Wang, Hao},
   journal={IEEE Transactions on Industrial Informatics},
@@ -9,7 +22,7 @@
   number={7},
   pages={7894-7904},
   doi={10.1109/TII.2022.3207835},
-  mark={SCI-1区},
+  mark={SCI-1区, IF=9.9},
   url={https://ieeexplore.ieee.org/abstract/document/9895321}
   }
 @ARTICLE{9732304,
@@ -23,7 +36,7 @@
   number={4},
   pages={686-698},
   doi={10.1109/JAS.2022.105464},
-  mark={SCI-1区},
+  mark={SCI-1区, IF=19.2},
   url={https://ieeexplore.ieee.org/abstract/document/9732304}
  }
 
@@ -120,7 +133,7 @@
   volume={21},
   number={1},
   pages={49-59},
-  mark={SCI-1区},
+  mark={SCI-1区, IF=9.9},
   keywords={Process control;Pipelines;Safety;Heuristic algorithms;Training;Monitoring;Minerals;Feeds;Working environment noise;Uncertainty;Intelligent control;offline reinforcement learning (RL);partially observed Markov decision processes (POMDP);paste thickener},
   doi={10.1109/TII.2024.3423440}
 }
