--- a/_portfolio/20260220ustb.md
+++ b/_portfolio/20260220ustb.md
@@ -1,15 +1,14 @@
+---
 title: "北京科技大学智能科学与技术学院工业智能课题组招收硕士/博士"
-excerpt: "长期招收硕士/博士研究生，研究方向：多模态大模型、世界模型、工业具身智能
-"
+excerpt: "长期招收硕士/博士研究生，研究方向：多模态大模型、世界模型、工业具身智能"
 collection: portfolio
 
-------
 
 ## 招聘/招生信息
 
 **课题组简介**
 课题组长期致力于人工智能与工业系统的交叉研究，聚焦多模态大模型、世界模型、工业具身智能等前沿方向。承担多项国家级与企业合作项目，与国内外知名高校及研究机构保持紧密合作。
-[点此处查看详细信息]([https://mp.weixin.qq.com/s/EAA-kWjnwrdGizdniuWYyw](https://www.yuanzhaolin.cn//cv_ch/))
+[点此处查看详细信息](https://www.yuanzhaolin.cn//cv_ch/)
 现长期招收博士/硕士研究生，欢迎对以下研究方向感兴趣的同学联系。
 
 **目前招生方向**
