--- a/_portfolio/20260220ustb.md
+++ b/_portfolio/20260220ustb.md
@@ -8,7 +8,8 @@ collection: portfolio
 
 **课题组简介**
 课题组长期致力于人工智能与工业系统的交叉研究，聚焦多模态大模型、世界模型、工业具身智能等前沿方向。承担多项国家级与企业合作项目，与国内外知名高校及研究机构保持紧密合作。
-[点此处查看详细信息](https://www.yuanzhaolin.cn//cv_ch/)
+[点此处查看详细信息](https://www.yuanzhaolin.cn//cv_ch/)。
+
 现长期招收博士/硕士研究生，欢迎对以下研究方向感兴趣的同学联系。
 
 **目前招生方向**
