--- a/_portfolio/20260220ustb.md
+++ b/_portfolio/20260220ustb.md
@@ -1,6 +1,6 @@
 ---
 title: "北京科技大学智能科学与技术学院工业智能课题组招收硕士/博士"
-excerpt: "长期招收硕士/博士研究生，研究方向：多模态大模型、世界模型、工业具身智能"
+excerpt: "长期招收硕士/博士研究生，研究方向：多模态大模型、世界模型、工业具身智能<br/><img src='/images/2026industrialAi.jpg'>"
 collection: portfolio
 ---
 
