--- a/markdown_generator/pubs.bib
+++ b/markdown_generator/pubs.bib
@@ -9,7 +9,7 @@
   keywords={Logistics;Transportation;Routing protocols;Prefabricated construction;Containers;Routing;Information sharing;Uncertainty;Job shop scheduling;Real-time systems;Cyber-physical internet;dynamic freight routing;routing protocols;multimodal and multicriteria shipment},
   doi={10.1109/TITS.2025.3581569},
   mark={SCI-1区, IF=8.4},
-  img={500x300.png}
+  img={pubs/ou2025.png}
 }
 
 @ARTICLE{9895321,
