--- a/markdown_generator/pubs.bib
+++ b/markdown_generator/pubs.bib
@@ -9,7 +9,8 @@
   keywords={Logistics;Transportation;Routing protocols;Prefabricated construction;Containers;Routing;Information sharing;Uncertainty;Job shop scheduling;Real-time systems;Cyber-physical internet;dynamic freight routing;routing protocols;multimodal and multicriteria shipment},
   doi={10.1109/TITS.2025.3581569},
   mark={SCI-1区, IF=8.4},
-  img={pubs/ou2025.png}
+  img={pubs/ou2025.png},
+  note={This paper investigates how Cyber-physical Internet (CPI) concepts can transform prefabricated construction logistics by introducing a protocol-based scheduling and routing framework designed to improve module shipment efficiency. Inspired by the logic of digital data transmission, the study draws parallels with internet communication principles to diagnose persistent challenges such as fragmented information sharing, limited coordination, and suboptimal routing decisions. To address these issues, the authors develop a suite of CPI protocols and propose a hierarchical, decentralized decision architecture governing logistics nodes. Numerical experiments and a real-world case study in the Greater Bay Area demonstrate enhanced efficiency, resilience, and collaboration, highlighting CPI’s potential to modernize complex construction logistics networks.}
 }
 
 @ARTICLE{9895321,
