update critical images and notes

--- a/markdown_generator/proceedings.bib
+++ b/markdown_generator/proceedings.bib
@@ -19,7 +19,9 @@
   timestamp    = {Mon, 31 Jul 2023 17:04:04 +0200},
   biburl       = {https://dblp.org/rec/conf/aaai/YuanBZLD23.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org},
-  mark    = {CCF-A}
+  mark    = {CCF-A},
+  img = {pubs/yuan2023_aaai.png},
+  note={This work proposes the Ordinary Differential Equation Recurrent State Space Model (ODE-RSSM), a continuous-time deep state space framework designed for nonlinear and stochastic input-output systems with irregularly sampled observations. By integrating an ODE-based network to model latent state evolution between time points, the approach overcomes the limitations of conventional discrete-time SSMs. An efficient reparameterization method is introduced to enable parallel training on batched ODEs with non-uniform time spans, significantly improving computational efficiency. Extensive experiments on multiple datasets, including a private industrial system exhibiting long-term delay and stochasticity, demonstrate superior open-loop prediction performance, highlighting ODE-RSSM’s effectiveness for representation, forecasting, and decision-making in real-world dynamic environments.}
 }
 @inproceedings{DBLP:conf/icann/LiYB20,
   author       = {Jia Li and
