--- a/markdown_generator/pubs.bib
+++ b/markdown_generator/pubs.bib
@@ -25,7 +25,9 @@
   pages={7894-7904},
   doi={10.1109/TII.2022.3207835},
   mark={SCI-1区, IF=9.9},
-  url={https://ieeexplore.ieee.org/abstract/document/9895321}
+  url={https://ieeexplore.ieee.org/abstract/document/9895321},
+  img={pubs/yuan2022_ajode.png},
+  note={This study presents the Autonomous Jump Ordinary Differential Equation Net (AJ-ODENet), a continuous-time modeling framework designed for complex industrial systems exhibiting periodic jump dynamics. AJ-ODENet combines multiple Hierarchical ODENets to capture stage-specific behaviors from irregularly sampled data, while a stage transition predictor enables autonomous transitions during open-loop simulation. An encoder–decoder implementation of the model is applied to a real data center cooling system, using multivariate inputs such as server power and environmental temperature to simulate runtime behavior. Results show accurate prediction of energy consumption within a 5% relative error, and the model further informs optimal cooling temperature settings, enabling 6%–25% reduction in energy usage.}
   }
 @ARTICLE{9732304,
   author={Yuan, Zhaolin and Li, Xiaorui and Wu, Di and Ban, Xiaojuan and Wu, Nai-Qi and Dai, Hong-Ning and Wang, Hao},
@@ -39,7 +41,9 @@
   pages={686-698},
   doi={10.1109/JAS.2022.105464},
   mark={SCI-1区, IF=19.2},
-  url={https://ieeexplore.ieee.org/abstract/document/9732304}
+  url={https://ieeexplore.ieee.org/abstract/document/9732304},
+  img={yuan2021.png},
+  note={This study develops a deep-learning, continuous-time predictive framework for thickening systems, aiming to forecast critical outputs such as underflow concentration and mud pressure for optimal process control. The proposed model addresses challenges from non-linearities, long delays, partially observed data, and continuous-time dynamics by integrating a sequential encoder, a state decoder, and a derivative module to learn a deterministic state-space representation. Evaluated on a tailing thickener from FLSmidth equipped with extensive sensors, the model outperforms existing discrete-time approaches, effectively mitigating the impact of long delays and accurately predicting both short- and long-term system behavior.}
  }
 
 @article{YUAN2022104578,
@@ -58,7 +62,9 @@
 	day = {01},
     mark={SCI-1区},
 	Bdsk-Url-1 = {https://www.sciencedirect.com/science/article/pii/S0886779822002188},
-	Bdsk-Url-2 = {https://doi.org/10.1016/j.tust.2022.104578}
+	Bdsk-Url-2 = {https://doi.org/10.1016/j.tust.2022.104578},
+	img={pubs/yuan2022.png}
+	note={This study addresses the challenge of accurately monitoring cemented paste backfilling (CPB) processes in harsh underground environments by proposing a 3D visualization and soft-sensing system. Using a GeoSLAM ZEB-HORIZON laser scanner, the system captures detailed 3D models of underground goafs and estimates backfilling height in real time based on accumulated paste volume. The framework further enables web-based simulation and visualization of the filling process, improving operational awareness and decision-making. Field validation in a real copper mine demonstrates that the proposed soft-sensing technique achieves a relative error below 10%, confirming its practical reliability and value for production management in CPB operations.}
 }
 
 
@@ -137,7 +143,9 @@
   pages={49-59},
   mark={SCI-1区, IF=9.9},
   keywords={Process control;Pipelines;Safety;Heuristic algorithms;Training;Monitoring;Minerals;Feeds;Working environment noise;Uncertainty;Intelligent control;offline reinforcement learning (RL);partially observed Markov decision processes (POMDP);paste thickener},
-  doi={10.1109/TII.2024.3423440}
+  doi={10.1109/TII.2024.3423440},
+  img={yuan2024.png},
+  note={This article proposes an offline-data-driven control strategy for paste thickening systems, addressing the challenges of high process complexity, partial observability, and environmental noise in mineral processing operations. By leveraging offline reinforcement learning, the approach eliminates the risks associated with unsafe online exploration while enabling data-efficient policy training. Operational trajectories are collected using a proportional–integral–derivative controller informed by domain knowledge, forming a reliable offline dataset. To handle constrained observation spaces, a novel algorithm—temporal batch-constrained Q-learning (TBCQ)—is developed for partially observed decision processes. Evaluations in both simulation and a real industrial paste thickener in a copper mine demonstrate improved control performance and significant tracking error reduction.}
 }
 @article{LI2025100605,
 title = {Quantification of paste homogeneity by vision-based identification method: Case study for an industrial mixer},
@@ -150,7 +158,9 @@ doi = {https://doi.org/10.1016/j.dibe.2025.100605},
 url = {https://www.sciencedirect.com/science/article/pii/S2666165925000055},
 author = {Xiaorui Li and Zhaolin Yuan and Hezheng Wang and Yong Wang and Xiaojuan Ban},
 keywords = {Cemented paste backfill, Paste homogeneity, Image segmentation, Gaussian process, Homogeneity metric},
-mark={SCI-2区, IF=6.2}
+mark={SCI-2区, IF=6.2},
+img={{pubs/li2025.png}}
+note={This study develops a vision-based device for real-time monitoring of paste homogeneity during mixing processes. An image segmentation method is proposed to identify non-paste regions and detect areas of insufficient uniformity. To quantitatively assess mixing quality, a non-homogeneity factor is defined, providing an objective measure of paste uniformity. The relationship between blade position and paste homogeneity is further modeled using Gaussian process regression, offering insights into mixing dynamics. The effectiveness of the proposed metric is validated in a paste backfill station, where the results demonstrate strong consistency with engineers’ practical assessments.}
 }
 @article{YUAN2025,
 title = {Chat with MES: LLM-driven user interface for manipulating garment manufacturing system through natural language},
@@ -161,7 +171,9 @@ doi = {https://doi.org/10.1016/j.jmsy.2025.02.008},
 url = {https://www.sciencedirect.com/science/article/pii/S027861252500038X},
 author = {Zhaolin Yuan and Ming Li and Chang Liu and Fangyuan Han and Haolun Huang and Hong-Ning Dai},
 keywords = {Interactive Manufacturing Execution System, Large language model, Text2SQL, LLM-Agent, Human-computer interaction},
-mark={SCI-1区, IF=12.3}
+mark={SCI-1区, IF=12.3},
+img={yuan2025_cwm.png},
+note={This study introduces Chat with MES (CWM), a conversational interface that replaces traditional manufacturing execution system (MES) graphical user interfaces with natural language interaction. By enabling operators to issue linguistic commands, CWM redefines human–computer interaction in industrial environments. To improve reliability, a multi-step Dynamic Operations Planning and Execution mechanism is proposed, decomposing complex tasks into controllable atomic operations. The framework is evaluated using a newly developed benchmark consisting of 55 crafted requests within a simulated garment manufacturing system. Experimental results show that CWM achieves an 80% task success rate, substantially outperforming GPT-4, which attains a 60% success rate under the same conditions.}
 }
 @ARTICLE{11025818,
   author={Yuan, Zhaolin and Ma, Long and Wei, Wenjia and Zhu, Xia and Sun, Mingjie and Chen, Duxin and Ban, Xiaojuan},
@@ -174,5 +186,7 @@ mark={SCI-1区, IF=12.3}
   keywords={Network systems;Topology;Network topology;Cause effect analysis;Time series analysis;Cloud computing;Training;Accuracy;Atmospheric modeling;Sun;Artificial intelligence for IT operations (AIOps);attribution method;data stream mining;event modeling},
   doi={10.1109/TNNLS.2025.3574316},
 url={https://ieeexplore.ieee.org/abstract/document/11025818},
-mark={SCI-1区, IF=10.2}
+mark={SCI-1区, IF=10.2},
+img={pubs/yuan2025_nec.png},
+note={This article introduces NetEventCause (NEC), an event-driven, unsupervised, and nonintrusive root cause analysis algorithm designed for large-scale private cloud network systems with unknown or incomplete topologies. Addressing the limitations of existing topology-free RCA approaches, NEC learns from historical alarm events to model the occurrence patterns of diverse alarm types using a multivariate neural temporal point process. Leveraging conditional intensity predictions and attribution methods, the algorithm identifies root alarms and reconstructs anomaly transmission chains from cascading alarm events. Extensive evaluations on synthetic data and real-world datasets from the Huawei Shennong Intelligent Maintenance and Operation Center demonstrate NEC’s superior performance in alarm modeling and root cause identification.}
 }
